Project1VS/force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <label>Session</label>
    <nameField>
        <displayFormat>SESSION-{0000}</displayFormat>
        <label>Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>