Project1VS/force-app/main/default/objects/Session__c/fields/Session_Data_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Data_Time__c</fullName>
    <label>Session Data/Time</label>
    <type>DateTime</type>
</CustomField>