Project1VS/force-app/main/default/objects/Session__c/fields/Session_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Date_Time__c</fullName>
    <label>Session Date / Time</label>
    <type>DateTime</type>
</CustomField>