Project1VS/force-app/main/default/objects/Session__c/fields/Session_Number__c.field-meta.xml
<CustomField>
    <fullName>Session_Number__c</fullName>
    <label>Session Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>